--- a/src/components/doctores/Doctores.css
+++ b/src/components/doctores/Doctores.css
@@ -1,7 +1,5 @@
-.card{
-  width: 98%;
-  margin-top: 35px;
-  position: relative;
-  left: 15px;
+.caard {
+  height: 370px;
+  width: 100%;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
-
