Se cambia favicon y nombre de la pagina.Se agrega img de sobre nosotros

--- a/src/components/sobrenosotros/Sobrenosotros.css
+++ b/src/components/sobrenosotros/Sobrenosotros.css
@@ -1,5 +1,5 @@
 .cards-wrapper {
-    padding: 60px 20px; /* Espacio entre navbar y footer */
+    padding: 60px 20px; 
     background-color: #fefefe;
   }
   
@@ -15,7 +15,8 @@
   }
   
   .card img {
-    height: 200px;
+    width: 100%;
+    height: 400px;
     object-fit: cover;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
